updated code to align with jdk 17